--- a/todo-app/src/app/home/home.component.css
+++ b/todo-app/src/app/home/home.component.css
@@ -1,5 +1,8 @@
 :host , .alert-custom {
-      color: #99004d;
-      background-color: #f169b4;
-      border-color: #800040;
-    }
+  color: #99004d;
+  background-color: #f169b4;
+  border-color: #800040;
+}
+#name {
+  position: relative;
+}
