about you added

--- a/todo-app/src/app/header/header.component.html
+++ b/todo-app/src/app/header/header.component.html
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-expand navbar-light bg-light">
+<nav class="navbar navbar-expand navbar-light bg-light fixed-top">
   <a class="navbar-brand" routerLink="/home">
     <img src="../../assets/images/logo.ico" width="30" height="30" class="d-inline-block align-top" alt="" loading="lazy">  
     Dark Shadow</a>
@@ -35,3 +35,4 @@
 
   </div>
 </nav>
+<br>
