--- a/todo-app/src/app/accounts/accounts.component.html
+++ b/todo-app/src/app/accounts/accounts.component.html
@@ -1,3 +1,4 @@
+<br>
 <div class="container-fluid">
     <ng-template #content let-c="close" let-d="dismiss">
         <form method="POST" [formGroup] ="formgroup"
@@ -28,6 +29,7 @@
         </form>
     </ng-template>
 
+    <br>
     <div class="row">
         <div class="col-sm-12">
             <button class="btn btn-outline-primary float-right mt-2 ml-2" (click)="open(content)">New Account</button>
@@ -42,23 +44,29 @@
              activeIds="ngb-panel-0"
              *ngFor="let account of accountList;let i=index">
                 <ngb-panel class="mt-1">
-                    <ng-template ngbPanelTitle>
-                        <span>&#9733; <b>{{account.name | uppercase}}</b> &#9733; 
-                            &nbsp;
-                        </span>
-                        <button class="btn btn-danger float-right"
-                                type="button"
-                                (click)="onDeleteAccount(i)"
-                                ngbPopover="Delete this Task" 
-                                triggers="mouseenter:mouseleave"
-                                placement="right"> X </button>
+                    <ng-template ngbPanelHeader>
+                        <div class="row">
+                            <div class="col-sm-10">
+                                <button ngbPanelToggle class="btn container-fluid text-left pl-0">
+                                    &#9733; <b>{{account.name | uppercase}}</b> &#9733;&nbsp;
+                                </button>
+                            </div>
+                            <div class="col-sm-2">
+                                <button class="btn btn-outline-danger float-right"
+                                    type="button"
+                                    (click)="onDeleteAccount(i)"
+                                    ngbPopover="Delete this Task" 
+                                    triggers="mouseenter:mouseleave"
+                                    placement="left"> X </button>
+                            </div>
+                        </div>
                     </ng-template>
                     <ng-template ngbPanelContent>
                         <p><b>{{account.username}}</b></p>
                         <hr>
                         <p *ngIf="!hide">{{account.password}}</p>
                         <p *ngIf="hide">Password Hidden</p>
-                        <mat-icon matSuffix (click)="hide = !hide">{{hide ? 'visibility_off' : 'visibility'}}</mat-icon>
+                        <mat-icon style="cursor: pointer;" matSuffix (click)="hide = !hide">{{hide ? 'visibility_off' : 'visibility'}}</mat-icon>
                     </ng-template>
                 </ngb-panel>
             </ngb-accordion>
