--- a/todo-app/src/app/home/home.component.css
+++ b/todo-app/src/app/home/home.component.css
@@ -6,3 +6,12 @@
 #name {
   position: relative;
 }
+
+.jumbotron {
+  margin: 0px auto;
+  padding: 20px 20px;
+  color: floralwhite; }
+
+  header {
+    background-image: url('../../assets/images/background-image-header.png');
+  }
